--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,78 @@
-body{
-  text-align: center;
+body {
+  font-family: 'Nanum Pen Script', cursive;
+}
+
+.notepad {
+  position:relative;
+  background-color: #fefefe;
+  width: 600px;
+  margin: 0 auto;
+  padding: 0;
+  min-height:495px;
+  border: 1px solid #dcdcdc;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.lines {
+  border-left: 1px solid #ffaa9f;
+  border-right: 1px solid #ffaa9f;
+  width: 2px;
+  float: left;
+  height: 100%;
+  min-height: 495px;
+  margin-left: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.header {
+  position: relative;
+  display:flex;
+  flex-direction: column;
   justify-content: center;
- 
+  align-items: center;
+  height: auto;
+  padding: 10px 0;
+}
+
+.header h1 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.todo-input {
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+}
+.input-box {
+  padding: 6px 12px;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+}
+
+.submit-btn {
+  color: #58ccfa;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: .8em;
+  text-transform: uppercase;
+  border: 1px solid #5FC9F3;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 6px 12px;
+  margin-left: 20px;
+}
+
+.submit-btn:hover {
+  color: #fefefe;
+  background-color: #58ccfa;
+  border-color: #5fc9f3;
+  transition: all 0.5s ease;
 }
